<resources>
    <string name="app_name">bmi app</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="weight">weight</string>
    <string name="_55">55</string>
    <string name="age">age</string>
    <string name="_22">22</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="result">result</string>
    <string name="gender">gender</string>
    <string name="reult2">result</string>
    <string name="_56">55</string>
</resources>