<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1d1d"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerhorizontalline">

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerverticalline">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_toStartOf="@+id/centerverticalline"
        android:background="#292929"
        android:layout_above="@+id/heightlayout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="@dimen/x5"
        android:layout_marginRight="@dimen/x5"
        android:id="@+id/male">


        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/x5"
            android:src="@drawable/man_icone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:id="@+id/textmale"
            android:textSize="18dp"
            android:layout_marginBottom="@dimen/dp10"
            android:textAlignment="center"/>
    </RelativeLayout>





    <RelativeLayout
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_toEndOf="@+id/centerverticalline"
        android:background="#292929"
        android:layout_above="@+id/heightlayout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="@dimen/x5"
        android:layout_marginRight="@dimen/x5"
        android:id="@+id/female">


        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/woman_icone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:id="@+id/textfemale"
            android:textSize="@dimen/x3"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>
    </RelativeLayout>







    <RelativeLayout
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_toStartOf="@+id/centerverticalline"
        android:layout_marginBottom="@dimen/x5"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/heightlayout"
        android:background="#292929"
        android:layout_marginLeft="@dimen/x5"
        android:layout_marginRight="@dimen/x5"
        android:id="@+id/weight">


        <TextView
            android:id="@+id/textweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x4"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dp18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/_55"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/x5"
            android:background="#292929"
            android:layout_marginBottom="@dimen/dp10">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementweight"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="#A9FFFFFF"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:id="@+id/incrementweight"/>
        </RelativeLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_toEndOf="@+id/centerverticalline"
        android:background="#292929"
        android:layout_marginBottom="@dimen/x5"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/heightlayout"
        android:layout_marginLeft="@dimen/x5"
        android:layout_marginRight="@dimen/x5"
        android:id="@+id/age">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/age"
            android:id="@+id/textage"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/x4"/>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/_22"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/x5"
            android:background="#292929"
            android:layout_marginBottom="@dimen/dp10">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementage"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="#A9FFFFFF"
            android:layout_marginBottom="@dimen/dp10">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:id="@+id/incrementage"/>
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:background="#292929"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@+id/centerhorizontalline"
        android:layout_marginBottom="-50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/heightlayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/height"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/x5"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/currentheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/_170"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:textStyle="bold"
            android:textSize="@dimen/x5"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/currentheight"
            android:layout_marginStart="@dimen/x5"/>


        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/x5"
            android:layout_marginLeft="@dimen/dp10"
            android:progressTint="#FF4C4C"
            android:layout_marginRight="10dp"
            android:id="@+id/seekbarforheight">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/calculatembmi"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/x5"
        android:layout_marginRight="@dimen/x5"
        android:textStyle="bold"
        android:background="#FF0000"/>

</RelativeLayout>