<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageview"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/contentlayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:src="@drawable/stop"
        android:layout_height="120dp"/>

    <RelativeLayout
        android:id="@+id/contentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#1C1C1C"
        android:padding="20dp">

        <TextView
            android:id="@+id/genderdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmicatogry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderdisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/reult2"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmidisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bmicatogry"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="#FB0000"
            android:text="@string/_56"
            android:textColor="#FFEB3B"
            android:textSize="44sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/recalculatembi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentlayout"
        android:layout_marginTop="92dp"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/x5"
        android:background="#FF0000"
        android:text="Back" />

</RelativeLayout>